turned background black

--- a/responsive-website-restaurant-main/index.html
+++ b/responsive-website-restaurant-main/index.html
@@ -1,20 +1,18 @@
-
-< lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--========== CSS ==========-->
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="assets/css/styles.css">
 
         <title>Euclid's Fantastic Playhouse</title>
     </head>
+    
     <body>
-
         <!--========== SCROLL TOP ==========-->
-        <a href="#" class="scrolltop" id="scroll-top">
+        <!-- <a href="#" class="scrolltop" id="scroll-top">
             <i class='bx bx-chevron-up scrolltop__icon'></i>
-        </a>
+        </a> -->
 
         <!--========== HEADER ==========-->
         <header class="l-header" id="header">
@@ -28,8 +26,7 @@
                         <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
                         <li class="nav__item"><a href="#menu" class="nav__link">Menu</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
-
-                        <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
+                        <li class = "nav__item"><i class='bx bx-moon change-theme' id="theme-button"></i></li>
                     </ul>
                 </div>
 
@@ -201,7 +198,7 @@
                 </div>
 
                 <div class="footer__content">
-                    <h3 class="footer__title">Adress</h3>
+                    <h3 class="footer__title">Address</h3>
                     <ul>
                         <li>Lima - Peru</li>
                         <li>Jr Union #999</li>
