--- a/responsive-website-restaurant-main/index.html
+++ b/responsive-website-restaurant-main/index.html
@@ -4,6 +4,7 @@
 
         <!--========== CSS ==========-->
         <link rel="stylesheet" href="assets/css/styles.css">
+        <!--========== MAIN JS ==========-->
 
         <title>Euclid's Fantastic Playhouse</title>
     </head>
@@ -118,12 +119,12 @@
                     </div>
                 </div>
                 
-                <button id="myBtn">modal</button>
+                <button id="btn" onclick="modalOnClick()">modal</button>
 
                 <div id="myModal" class="modal">
 
                 <div class="modal-content">
-                    <span class="close">&times;</span>
+                    <span class="close" onclick="spanOnClick()">&times;</span>
                     <p>Order</p>
                     <input type= 'password' minlength="8"/>
                     <input type = 'time'/>
@@ -212,8 +213,7 @@
 
             <p class="footer__copy">&#169; 2020 Bedimcode. All right reserved</p>
         </footer>
-
-        <!--========== MAIN JS ==========-->
-        <script src="assets/js/main.js"></script>
     </body>
 </html>
+
+<script src="assets/js/main.js"></script>
