--- a/responsive-website-restaurant-main/index.html
+++ b/responsive-website-restaurant-main/index.html
@@ -120,17 +120,20 @@
                 </div>
             </div>
 
-            <button id="myBtn">modal</button>
+            <!-- Trigger/Open The Modal -->
+            <button id="myBtn" onclick="modalOnClick()">modal</button>
 
+            <!-- The Modal -->
             <div id="myModal" class="modal">
 
+                <!-- Modal content -->
                 <div class="modal-content">
-                    <span class="close">&times;</span>
+                    <span class="close" onclick="spanOnClick()">&times;</span>
                     <p>Order</p>
                     <input type='password' minlength="8" />
                     <input type='time' />
-
                 </div>
+            </div>
         </section>
 
         <!--===== APP =======-->
