--- a/responsive-website-restaurant-main/index.html
+++ b/responsive-website-restaurant-main/index.html
@@ -5,7 +5,7 @@
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Euclid's Fantastic Playhouse</title>
+    <title id="title">Euclid's Fantastic Playhouse</title>
 </head>
 
 <body>
