--- a/responsive-website-restaurant-main/index.html
+++ b/responsive-website-restaurant-main/index.html
@@ -4,6 +4,9 @@
 
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
     <title id="title">Euclid's Fantastic Playhouse</title>
 </head>
@@ -15,26 +18,24 @@
         </a> -->
 
     <!--========== HEADER ==========-->
-    <header class="l-header" id="header">
-        <nav class="nav bd-container">
-            <a href="#" class="nav__logo">Tasty</a>
+    <nav class="nav bd-container">
+        <a href="#" class="nav__logo">Euclid Cafe</a>
 
-            <div class="nav__menu" id="nav-menu">
-                <ul class="nav__list">
-                    <li class="nav__item"><a href="#home" class="nav__link active-link">Home</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
-                    <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
-                    <li class="nav__item"><a href="#menu" class="nav__link">Menu</a></li>
-                    <li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
-                    <li class="nav__item"><i class='bx bx-moon change-theme' id="theme-button"></i></li>
-                </ul>
-            </div>
+        <div class="nav__menu" id="nav-menu">
+            <ul class="nav__list">
+                <a href="#home" class="nav__link active-link">Home</a>
+                <a href="#about" class="nav__link">About</a>
+                <a href="#services" class="nav__link">Services</a>
+                <a href="#menu" class="nav__link">Menu</a>
+                <a href="#contact" class="nav__link">Contact us</a>
+                <i class='bx bx-moon change-theme' id="theme-button"></i>
+            </ul>
+        </div>
 
-            <div class="nav__toggle" id="nav-toggle">
-                <i class='bx bx-menu'></i>
-            </div>
-        </nav>
-    </header>
+        <div class="nav__toggle" id="nav-toggle">
+            <i class='bx bx-menu'></i>
+        </div>
+    </nav>
 
     <main class="l-main">
         <!--========== HOME ==========-->
